# codeconcept-ai

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: audio.py  base.py  planner.py  reviewer.py
backend/: exceptions.py  gemini.py  gemini_errors.py  gemini_tts.py  jobs.py  llm_client.py  models.py  prompt_loader.py  retry.py  timer.py  tts_client.py  wav.py  workflow.py
config/: settings.py
prompts/: planner.md  reviewer.md
renderer/: composer.py  dimensions.py  html_render.py  html_renderer.py  icon_registry.py  screenshot.js  screenshot.py  svg_diagram.py
scripts/: generate_presentation.py  generate_video.py
templates/: base.html  components.html
templates/layouts/: bullets.html  diagram.html  ending.html  title.html
templates/styles/: base.css  tokens.css
templates/styles/themes/: codeconcept.css  minimal.css
