[project]
name = "codeconcept-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.12.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]
